Recovered the project after i had to rollback after an attempt at turning it into a vst. Turns out that Java isn't supported at all for vst's, and the only wrapper for it was made in 2003 and is currently in pre-alpha (Last update to the project happened in 2009).